{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "03b3ec15-c769-4ab8-87a7-415f3b35841b",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b16f4c73-df05-4c2a-9013-a9fd0cfa5e0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0bdd92ea-0ea5-44c5-a050-3ea8d4c329d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "2e6ce5f5-8e46-4163-aef7-b8521fc7de3c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "823eda98-2f4a-46f8-9d68-e5742ea904fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "b065d5ae-f7f4-4e79-b1cc-71b2bc4d87a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkillHold",
                    "type": "Button",
                    "id": "099cb733-236f-413f-936d-317409783156",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Burst",
                    "type": "Button",
                    "id": "910bfa26-29fe-4873-9fbe-a074cf25e53b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QuickMenu",
                    "type": "Button",
                    "id": "d71cd8a7-a963-408f-b2ee-0da20f307fa9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NormalAttack",
                    "type": "Button",
                    "id": "932ef013-7493-4321-a658-fe3185955c5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChargedAttack",
                    "type": "Button",
                    "id": "6ab6b254-8fff-4dc5-b91a-11a432e1c71d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "f9077331-2ef2-4b8a-9612-873938908aa2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMap",
                    "type": "Button",
                    "id": "effb5bf6-51ab-4ee8-8364-be681fd94c7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenEscMenu",
                    "type": "Button",
                    "id": "cd152140-1a5a-4e36-8d7b-970b5baa1f40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWheel",
                    "type": "Value",
                    "id": "0aa76714-4921-4184-b6f7-c002a9d01ba1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "46da3726-4a78-4df0-bf1f-44985d8fb87f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1463dfd3-0d85-4303-9828-326be33fa4a7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7e9e9384-cbf0-4195-bc5b-2065586626bb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "29698627-4c5d-4c98-ae34-e7dbc6f664b2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5a6ccb30-39e0-4127-aaa8-d2860a6f7904",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ef2c1489-4d26-44f0-94d4-85a0f2572f15",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c35175a-7db0-482c-b405-7ced2543874b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50644746-ca3d-473e-8f38-fd85c1a2d8b5",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1b0a662-8007-4da1-ba7b-ad2f3358b9f7",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28443db4-3f11-4f4d-80ff-7d036dd6ab5d",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "SkillHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4ca08a1-54f9-41d5-9c4e-c36b6a6bcd04",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Burst",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1c16aaa-4cfa-48ae-ace4-5f5fb9337ff4",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "QuickMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbaefdf0-b0a4-4828-963d-9c2338037a0f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NormalAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "796ebec6-d741-49e6-aac0-0434e6b79b7e",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ba7a505-9521-4044-a592-cb43978e606a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ChargedAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5095781a-a3e8-4109-aa09-d85c0175a321",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3c345a6-d04a-441e-a8ac-d5e218bfbca5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenEscMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4b03e52-80b1-4d0a-ab91-1b3f5851ce15",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "76ac9b0d-9584-4ab1-b22a-ad3b5d536882",
            "actions": [
                {
                    "name": "CloseInventory",
                    "type": "Button",
                    "id": "84fff91e-5e30-465e-a2ee-51c01e73fedf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextPage",
                    "type": "Button",
                    "id": "6cdd1716-79a8-4026-b7b6-072e3dc2668c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PreviousPage",
                    "type": "Button",
                    "id": "22f90fd6-d4b4-41bb-be16-c38d02fcb2fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "731599d6-e6de-4730-b60d-3881edc25ed6",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53b26bed-122f-4e38-8194-e5d907648d12",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17f7e3ce-d199-4270-87b7-0f5ca9122002",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextPage",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "434a2485-09ce-4b98-a7f9-63fded44d822",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousPage",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Map",
            "id": "0276d16e-07ff-4d2d-99f4-e8f7727346d1",
            "actions": [
                {
                    "name": "CloseMap",
                    "type": "Button",
                    "id": "51d3e19b-300c-407d-8359-e68c7f1d530e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d39575dd-6fc0-4b5e-893b-056b04dbd19e",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b801901-41c9-4542-846f-261489d133b2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EscMenu",
            "id": "6feb0245-8c6f-45a3-99b0-5309e35de091",
            "actions": [
                {
                    "name": "CloseEscMenu",
                    "type": "Button",
                    "id": "8188cfaa-14f2-47ec-a8af-df989e5a0982",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1e856256-4cc2-4f47-b983-2aa26673a135",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseEscMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogues",
            "id": "0d6c659c-46b0-47b7-b208-95997caca2c4",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}